# cex

./: .clang-format  README.md  cex.h  meson.build
examples/: argue_app.c
include/: argue.h  cex.h  core.h
src/: argue.c  char_string.c  panic.c
tests/: test_char_string.c
